Blake and Sarah at bla_bbie's

--- a/Bamboo.html
+++ b/Bamboo.html
@@ -36,9 +36,9 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
-<p class="textblock"> All year round: Trim and pleach to keep the pathways clear and the coridors open. </p>
+<p class="textblock"> All year round: Trim and pleach to keep the pathways clear and corridors open. </p>
 
 
         </div>
@@ -69,7 +69,7 @@
 
           <h2> Uses </h2>
 
-          <p class="textblock"> Uses include Onsite structures, garden staking, and community projects upon request, but if you hear a whistle, it could be the sound of a new bamboo flute. </p>        </div>
+          <p class="textblock"> Uses include on-site structures, garden staking and community projects upon request. <span> <i>But if you hear a whistle, it could be the sound of a new bamboo flute. </i></span></p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -84,13 +84,13 @@
           <p class="textblock"> <a href="http://bamboo-identification.co.uk/html/cultivated_genera.html" style="text-decoration: underline;"> Hyperlink to a dichotomous key of Bamboo species commonly growing in the US and Canada.</a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
-<!-- ORGINS 💌 -->
+<!-- ORIGINS 💌 -->
 
-<button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+<button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock">  </p>        </div>
 <!-- End of orgins -->
@@ -112,12 +112,12 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Bamboo </h1>
+          <h1> Bamboo &nbsp <i>Bambusa vulgaris</i>   </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="index.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="index.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
