--- a/Dandelion.html
+++ b/Dandelion.html
@@ -36,7 +36,7 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock"> Let it be. They will grow. </p>
 
