--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
         <col style= "width: 2%"id="column36">
     </colgroup>
 
-	<caption>  To find out more about the Means of  Production garden and its history, <a class= "earthand" href="https://earthand.com/our-fibre-shed/means-of-production-garden/"> visit the garden page </a> on the <a class= "earthand" href="https://earthand.com/"> EartHand website </a>.
+	<caption>  To find out more about the Means of Production garden and its history, <a class= "earthand" href="https://earthand.com/our-fibre-shed/means-of-production-garden/"> visit the garden page </a> on the <a class= "earthand" href="https://earthand.com/"> EartHand website </a>.
         <br>
         <br>
-        This project could not have been completed without the help of the following people: Sharon Kallis, David Gowman, Lori Synder, Catherine Shapiro, Sandy Riecken, Jessica Eguia, Jaymie Johnson and Mikaela Kautzky. Thank you for sharing your knowledge, time, drawings, and photos.
+        This project could not have been completed without the help of the following people: Sharon Kallis, David Gowman, Lori Synder, Catherine Shapiro, Sandy Riecken, Jessica Eguia, Jaymie Johnson, Mikaela Kautzky and Blake Abbie. Thank you for sharing your knowledge, time, drawings and photos.
       And thank you to Oliver Kellhammer, who started the garden in 2002.
       <br>
-      -Sarah Holloway 2021
+      — Sarah Holloway 2021
 
 
 </caption>
@@ -3451,8 +3451,11 @@
 
   <p class="explain">
 
-    <span class="hellohellohello"> Welcome to the digital Means of Production Garden. </span> The garden itself is located on the unceded traditional territories of the Musqueam, Squamish and Tsleil-Waututh people at E. 6th and St Catherines in Vancouver Canada. Like a walk through the garden itself, this digital experience is intended to change with every visit, with new plants to discover each time. The plantings are grouped into four different categories that relate to traditional human relationships and the uses of the plants found on site. With each visit, one plant from each traditional use is presented.     I invite you to click around, scroll and refresh.
-
+    <span class="hellohellohello"> Welcome to the digital Means of Production Garden. </span> <br>The garden itself is located on the unceded traditional territories of the Sḵwx̱wú7mesh (Squamish), Səl̓ílwətaʔ/Selilwitulh (Tsleil-Waututh) and xʷməθkʷəy̓əm (Musqueam) Nations at East 6th Street and St. Catherines Street in so-called Vancouver, Canada.
+  </br>
+  <br></br>
+    <br>Like a walk through the garden itself, this digital experience is intended to change with every visit, with new plants to discover each time. Plantings are grouped into four different categories referring to traditional human relationships and uses of the plants found on site. With each visit, one plant from each traditional use is presented. I invite you to click around, scroll and refresh.
+</br>
 </p>
 
   <p class="explain">
