--- a/Apple tree.html
+++ b/Apple tree.html
@@ -36,18 +36,17 @@
 
         <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-        <h2> Care & Maitnence </h2>
+        <h2> Care & Maintenance </h2>
 
         <p class="textblock">
 February, March, April, May:
 <br>
-Prune, mulch, weed, and fertilize with compost tea.
-<br>
-<i> I think we all could use some tea after so many rainy days. </i>
+Prune, mulch, weed and fertilize with compost tea.
+<span> <i> We could all use a warm cup of tea after so many rainy days. </i></span>
 <br><br>
 June, July:
 <br>
-Weed.
+Weed. Bye Bye.
 <br> <br>
 August, September, October:
 <br>
@@ -55,10 +54,9 @@ Trim water shoots, weed some more, prune and serve compost tea.
 <br> <br>
 November, December, January:
 <br>
-Snip, snip, snip (Prune).
+Snip, snip, snip. (Prune)
 <br> <br>
 
-<i> Repeat. </i>
  </p>
 
 
@@ -80,14 +78,14 @@ Snip, snip, snip (Prune).
                   <p class="textblock">
 February, March, April:
 <br>
-Greenwood can be harvested-as needed- for spoons, buttons, and other small projects.
+Green wood can be harvested — as needed — for spoons, buttons and other small projects.
 <br> <br>
 August, September:
 <br>
 High tannins in the leaves and bark make an excellent choice for a natural dye.
 <br>
 <br>
-And, of course, fall is apple picking.
+And, of course, autumn is apple picking.
  </p>        </div>
 
         <!-- End of harvest info  -->
@@ -102,10 +100,10 @@ And, of course, fall is apple picking.
                   <h2> Uses </h2>
 
                   <p class="textblock">
-Apple wood is a great hardwood to carve.
+Green wood from the apple tree carves great.
 <br>
 <br>
-The branches and leaves in late summer and early fall yield tannin-rich natural dyes.
+The branches and leaves in late summer and early autumn yield tannin-rich natural dyes.
 <br>
 <br>
 Both apple wood and apple dye react very well with iron as a colour depressant.
@@ -158,7 +156,7 @@ Both apple wood and apple dye react very well with iron as a colour depressant.
               <div class= "column_layout" class="infoblock">
 
         <!-- PLANT NAME AND LATIN -->
-                  <h1> Apple Tree </h1>
+                  <h1> Apple Tree &nbsp <i>Malus domestica</i> </h1>
               </div>
 
         <!-- EXIT PAGE BUTTONS -->
