--- a/St.john's wort.html
+++ b/St.john's wort.html
@@ -69,7 +69,7 @@ P< br>
 
           <h2> Harvest </h2>
 
-          <p class="textblock"> St. John's wort begins flowering around Summer Solstice. <br> Harvest blooms and seeds regularly there after throughout the summer. <br> At the end of the season the entire plant is usable for dyeing.</p>    </div>
+          <p class="textblock"> St. John’s wort begins flowering around Summer Solstice. <br> Harvest blooms and seeds regularly there after throughout the summer. <br> At the end of the season the entire plant is usable for dyeing.</p>    </div>
 
 <!-- End of harvest info  -->
 <br>
