--- a/St.john's wort.html
+++ b/St.john's wort.html
@@ -82,7 +82,7 @@ P< br>
 
           <h2> Uses </h2>
 
-          <p class="textblock"> The flowers can be used for natual dyes and for medicinal purposes. St. John's wort creates yellow/ red and green dyes depending on mordanting. <br> Used traditionally  as a tea for depression. </p>        </div>
+          <p class="textblock"> The flowers can be used for natual dyes and for medicinal purposes. St. John’s wort creates yellow/ red and green dyes depending on mordanting. <br> Used traditionally  as a tea for depression. </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
