--- a/St.john's wort.html
+++ b/St.john's wort.html
@@ -94,7 +94,7 @@ P< br>
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Hypericum%20perforatum&redblue=Both&lifeform=7" style="text-decroation:underline;"> Hyperlink to information on identifying common st. john's wort. </p>        </div>
+          <p class="textblock"> <a href="https://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Hypericum%20perforatum&redblue=Both&lifeform=7" style="text-decroation:underline;"> Hyperlink to information on identifying common st. john's wort. </a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
