Update Blackberry (himalayan and thornless).html

--- a/Blackberry (himalayan and thornless).html
+++ b/Blackberry (himalayan and thornless).html
@@ -58,9 +58,10 @@
 
                   <p class="textblock"> Himalayan blackberry stalks may be harvested for fibre.
                   <br>
-                  Thornless blackberry stalks do not provide fibre as the Himalayan does.<i>Different strokes. </i>
+                  Thornless blackberry stalks do not provide fibre, as the Himalayan does.<span><i>Different strokes. Different pokes.</i></span>
+
                   <br>
-                  However, species provide delicious berries in the late summer. </p>        </div>
+                  However, both species provide delicious berries in the late summer. </p>        </div>
 
         <!-- End of harvest info  -->
         <br>
@@ -73,7 +74,7 @@
 
                   <h2> Uses </h2>
 
-                  <p class="textblock"> Stalks from himalayan blackberry bush can be used for corage/basketry fibre. </p>        </div>
+                  <p class="textblock"> Stalks from Himalayan blackberry bushes can be used for corage or basketry fibre. </p>        </div>
         <!-- End of uses info -->
         <br>
         <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -85,19 +86,19 @@
 
                   <h2> Plant Identification </h2>
 
-                  <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/dkey/rubus/" style="text-decoration: underline;"> Hyperlink to a dichotomous key of Blackberry species. </a>  </p>        </div>
+                  <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/dkey/rubus/" style="text-decoration: underline;"> Dichotomous key of Blackberry species. </a>  </p>        </div>
         <!-- End of Plant identification -->
         <br>
         <!-- ORGINS 💌 -->
 
-                <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+                <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
                 <div id="orginsinfo" class="infoblock" style="display:none">
                   <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-                  <h2> Orgins </h2>
+                  <h2> Origins </h2>
 
-                  <p class="textblock"> Rubus armeniacus is native to Armenia but has over time naturalized around the world. The species is invasive to Vancouver.
-                  <br> Rubus ulmifolius is native to western Europe. </p>        </div>
+                  <p class="textblock"> <i>Rubus armeniacus</i> is native to Armenia but has over time naturalized around the world. The species is invasive to Vancouver.
+                  <br> <i>Rubus ulmifolius</i> is native to western Europe. </p>        </div>
         <!-- End of orgins -->
         <br>
         <!-- STORIES 💌 -->
@@ -109,7 +110,7 @@
 
                   <h2> Stories </h2>
 
-                  <p class="textblock"> Share your stories of Blackberry (thornless and himalayan) with earthandmapping(at)gmail.com </p>        </div>
+                  <p class="textblock"> Share your stories of Blackberry — thornless and Himalayan — with earthandmapping(at)gmail.com </p>        </div>
               </div>
         <!-- End of stories -->
 
@@ -117,7 +118,7 @@
               <div class= "column_layout" class="infoblock">
 
         <!-- PLANT NAME AND LATIN -->
-                  <h1> Himalayan blackberry (Rubus armeniacus) and thornless blackberry (Rubus ulmifolius) </h1>
+                  <h1> Himalayan blackberry <i>Rubus armeniacus</i> and thornless blackberry <i>Rubus ulmifolius</i> </h1>
               </div>
 
         <!-- EXIT PAGE BUTTONS -->
