--- a/Finder.html
+++ b/Finder.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" style="background-image:url(images/shed.jpg); height:2000px; background-repeat: no-repeat; background-size: 100%, 100%;">
 <head>
 <link href="https://fonts.googleapis.com/css?family=Supermercado+One" rel="stylesheet">
   <meta charset="utf-8">
@@ -25,7 +25,7 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/pathway5.jpg); height:2200px;">
+<body ID="frame_test" >
 
   <div>
 
