--- a/Empress tree.html
+++ b/Empress tree.html
@@ -130,7 +130,7 @@
 
 <!-- EXIT PAGE BUTTONS -->
           <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="index.html">~Back to Map~</a></button>
+          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
 
     </div>
 
