--- a/Finder.html
+++ b/Finder.html
@@ -201,7 +201,7 @@
 
   </div>
 
-  <button class="gohome" style="top: 500px"> <a href="index.html">~Back to Map~</a></button>
+  <button class="gohome" style="top: 500px"> <a href="map.html">~Back to Map~</a></button>
   <blockquote class="letsgo"> A finder for all the plants in the digtal garden. Click the text to be sent to a plant's inspect page.</blockquote>
 
 
