--- a/Apple tree.html
+++ b/Apple tree.html
@@ -161,7 +161,7 @@ Both apple wood and apple dye react very well with iron as a colour depressant.
 
         <!-- EXIT PAGE BUTTONS -->
                   <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-                  <button class="gohome"> <a href="index.html">~Back to Map~</a></button>
+                  <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
 
             </div>
 
