--- a/Bamboo.html
+++ b/Bamboo.html
@@ -117,7 +117,7 @@
 
 <!-- EXIT PAGE BUTTONS -->
           <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
-          <button class="gohome"> <a href="index.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
 
     </div>
 
