--- a/Day lily.html
+++ b/Day lily.html
@@ -130,7 +130,7 @@ Dried leaves from at the end of the season are excillent for weaving or to make 
 
 <!-- EXIT PAGE BUTTONS -->
           <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="index.html">~Back to Map~</a></button>
+          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
 
     </div>
 
