--- a/Golden hops.html
+++ b/Golden hops.html
@@ -136,7 +136,7 @@ long strands from pruning used in basketry.
 
 <!-- EXIT PAGE BUTTONS -->
           <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="index.html">~Back to Map~</a></button>
+          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
 
     </div>
 
