--- a/Phorium tanax.html
+++ b/Phorium tanax.html
@@ -132,7 +132,7 @@ and baskets.
 
 <!-- EXIT PAGE BUTTONS -->
           <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="index.html">~Back to Map~</a></button>
+          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
 
     </div>
 
