--- a/map.html
+++ b/map.html
@@ -35,7 +35,7 @@
   <title>Means of Production Garden</title>
 
   </head>
-  <body class="index">
+  <body ID="frame_test" style="background-image:url(images/pathway5.jpg); height:2200px; ">
     <button class="iconshome" onclick="showhide('careinfo'); fibre_plants_button()" id="fibre_plants_button" ><p> Fibre<p> </button>
     <div id="careinfo" class="infoblockhome" style="display:none">
 
