--- a/Goutweed.html
+++ b/Goutweed.html
@@ -56,7 +56,7 @@
 
           <h2> Harvest </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> info on the care and maintenance of weld. </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
