--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
 <body ID="frame_test" >
 
   <h1> Welcome to the digital Means of Production Garden. </h1>
-  <p class="explain">
-
- <br>The garden itself is located on the unceded traditional territories of the Sḵwx̱wú7mesh (Squamish), Səl̓ílwətaʔ/Selilwitulh (Tsleil-Waututh) and xʷməθkʷəy̓əm (Musqueam) Nations at East 6th Street and St. Catherines Street in so-called Vancouver, Canada.
-</br>
+<p class="explain">
+The garden itself is located on the unceded traditional territories of the Sḵwx̱wú7mesh (Squamish), Səl̓ílwətaʔ/Selilwitulh (Tsleil-Waututh) and xʷməθkʷəy̓əm (Musqueam) Nations at East 6th Street and St. Catherines Street in so-called Vancouver, Canada.
 <br></br>
   <br>Like a walk through the garden itself, this digital experience is intended to change with every visit, with new plants to discover each time. Plantings are grouped into four different categories referring to traditional human relationships and uses of the plants found on site. With each visit, one plant from each traditional use is presented. I invite you to click around, scroll and refresh.
 </br>
