--- a/Apple tree.html
+++ b/Apple tree.html
@@ -46,7 +46,7 @@ Prune, mulch, weed and fertilize with compost tea.
 <br><br>
 June, July:
 <br>
-Weed. Bye Bye.
+Weed. <span><i>Bye Bye.</i></span>
 <br> <br>
 August, September, October:
 <br>
@@ -121,7 +121,7 @@ Both apple wood and apple dye react very well with iron as a colour depressant.
 
                   <p class="textblock">
 
-<a href="http://www.canadiantreetours.org/species-pages/Common_apple.html" style="text-decoration: underline;"> Hyperlink to identifiers of the branches, buds, bark and twigs. </a>
+<a href="http://www.canadiantreetours.org/species-pages/Common_apple.html" style="text-decoration: underline;"> Identifiers of branches, buds, bark and twigs. </a>
 
 
                    </p>        </div>
@@ -129,11 +129,11 @@ Both apple wood and apple dye react very well with iron as a colour depressant.
         <br>
         <!-- ORGINS 💌 -->
 
-                <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+                <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
                 <div id="orginsinfo" class="infoblock" style="display:none">
                   <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-                  <h2> Orgins </h2>
+                  <h2> Origins </h2>
 
                   <p class="textblock">    Growing all over the world. </p> </div>
         <!-- End of orgins -->
@@ -148,7 +148,7 @@ Both apple wood and apple dye react very well with iron as a colour depressant.
 
                   <h2> Stories </h2>
 
-                  <p class="textblock"> Share your stories of Apple trees with earthandmapping(at)gmail.com </p>        </div>
+                  <p class="textblock"> Share your stories of apple trees with earthandmapping(at)gmail.com </p>        </div>
               </div>
         <!-- End of stories -->
 
