--- a/Apple tree.html
+++ b/Apple tree.html
@@ -135,7 +135,7 @@ Both apple wood and apple dye react very well with iron as a colour depressant.
 
                   <h2> Origins </h2>
 
-                  <p class="textblock">    Growing all over the world. </p> </div>
+                  <p class="textblock">    Apple trees are found growing all over the world. </p> </div>
         <!-- End of orgins -->
         <br>
         <!-- STORIES 💌 -->
@@ -160,8 +160,8 @@ Both apple wood and apple dye react very well with iron as a colour depressant.
               </div>
 
         <!-- EXIT PAGE BUTTONS -->
-                  <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-                  <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+                  <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+                  <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
             </div>
 
