--- a/Bamboo.html
+++ b/Bamboo.html
@@ -81,7 +81,7 @@
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="http://bamboo-identification.co.uk/html/cultivated_genera.html" style="text-decoration: underline;"> Hyperlink to a dichotomous key of Bamboo species commonly growing in the US and Canada.</a> </p>        </div>
+          <p class="textblock"> <a href="http://bamboo-identification.co.uk/html/cultivated_genera.html" style="text-decoration: underline;"> A dichotomous key of Bamboo species commonly growing in the US and Canada.</a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORIGINS 💌 -->
@@ -117,7 +117,7 @@
 
 <!-- EXIT PAGE BUTTONS -->
           <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
