black and bloody

--- a/Blackberry (himalayan and thornless).html
+++ b/Blackberry (himalayan and thornless).html
@@ -58,10 +58,11 @@
 
                   <p class="textblock"> Himalayan blackberry stalks may be harvested for fibre.
                   <br>
-                  Thornless blackberry stalks do not provide fibre, as the Himalayan does.<span><i>Different strokes. Different pokes.</i></span>
+                  Thornless blackberry stalks do not provide fibre, as the Himalayan does. <span><i>Different strokes. Different pokes.</i></span>
+                  <br>
 
                   <br>
-                  However, both species provide delicious berries in the late summer. </p>        </div>
+                  However, both species provide delicious berries in late summer. </p>        </div>
 
         <!-- End of harvest info  -->
         <br>
@@ -98,6 +99,7 @@
                   <h2> Origins </h2>
 
                   <p class="textblock"> <i>Rubus armeniacus</i> is native to Armenia but has over time naturalized around the world. The species is invasive to Vancouver.
+<br>
                   <br> <i>Rubus ulmifolius</i> is native to western Europe. </p>        </div>
         <!-- End of orgins -->
         <br>
@@ -118,12 +120,12 @@
               <div class= "column_layout" class="infoblock">
 
         <!-- PLANT NAME AND LATIN -->
-                  <h1> Himalayan blackberry <i>Rubus armeniacus</i> and thornless blackberry <i>Rubus ulmifolius</i> </h1>
+                  <h1> Himalayan blackberry &nbsp <i>Rubus armeniacus</i> &nbsp and thornless blackberry &nbsp <i>Rubus ulmifolius</i> </h1>
               </div>
 
         <!-- EXIT PAGE BUTTONS -->
-                  <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-                  <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+                  <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+                  <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
             </div>
 
