--- a/Blood root.html
+++ b/Blood root.html
@@ -36,14 +36,13 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
-Bloodroot is highly toxic to animals and humans,
+Bloodroot is highly toxic to animals and humans.
 <br>
-shade tolerant,
 <br>
-low care <i> -let it be.</i>
+It is shade tolerant and requires low care <i> <span>Let it be.</i></span>
 <br>
 <br>
 Early spring:
@@ -53,7 +52,7 @@ Compost around plant edges.
 <br>
 August, September, October:
 <br>
-At MOP, fences are made to stop the blood root from being trampled by unaware apple pickers.
+At MOP, fences are made to stop the bloodroot from being trampled by unaware apple pickers.
 
  </p>
 
@@ -89,7 +88,7 @@ Harvest roots for red dye.</p> </div>
 
           <h2> Uses </h2>
 
-          <p class="textblock"> A red dye derived from the root is traditionally used by indigenous cultures across Turtle Island.
+          <p class="textblock"> A red dye can be produce from the plant's root and is traditionally used by indigenous cultures all across Turtle Island.
  </p>        </div>
 <!-- End of uses info -->
 <br>
@@ -102,18 +101,18 @@ Harvest roots for red dye.</p> </div>
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://www.wildflower.org/plants/result.php?id_plant=saca13" style="text-decoration: underline"> Hyperlink for a description of the leaf, stem and flower of blood root. </a> </p>        </div>
+          <p class="textblock"> <a href="https://www.wildflower.org/plants/result.php?id_plant=saca13" style="text-decoration: underline"> Description of the leaf, stem and flower of bloodroot. </a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
-          <p class="textblock"> Eastern North America. </p>        </div>
+          <p class="textblock"> Bloodroot is endemic to eastern North America. </p>        </div>
 <!-- End of orgins -->
 <br>
 <!-- STORIES 💌 -->
@@ -133,12 +132,12 @@ Harvest roots for red dye.</p> </div>
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Bloodroot (Sanguinaria canadensis) </h1>
+          <h1> Bloodroot &nbsp <i>Sanguinaria canadensis </i></h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
