--- a/Blueberry.html
+++ b/Blueberry.html
@@ -36,20 +36,20 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
   February, March, April, May:
   <br>
-  prune, mulch, weed, (a) splash(/es) of compost tea.
+  Prune, mulch, weed, (a) splash(/es) of compost tea.
 <br> <br>
   June:
   <br>
   Construct suport structures
 <br> <br>
-  July, Augaust, September, October:
+  July, August, September, October:
   <br>
-  weed, more compost tea.
+  Weed, more compost tea. <span> <i> Ice tea for you.</i></span>
   <br><br>
   November, December, January:
   <br>
@@ -74,7 +74,7 @@
 
           <h2> Harvest </h2>
 
-          <p class="textblock"> Blueberries to pick in July and in August. </p>        </div>
+          <p class="textblock"> Ripe blueberries can be picked in July and August. </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
@@ -87,7 +87,7 @@
 
           <h2> Uses </h2>
 
-          <p class="textblock"> Blueberries to eat. </p>        </div>
+          <p class="textblock"> Blueberries to eat. <span><i>yum</i></span></p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -99,18 +99,18 @@
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/species/vaccinium/corymbosum/" style="text-decoration: underline"> Hyperlink to identify highbush blackberry (Vaccinium corymbosum) </a>  </p>        </div>
+          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/species/vaccinium/corymbosum/" style="text-decoration: underline"> How to identify highbush blackberry <i>Vaccinium corymbosum</i> </a>  </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
-          <p class="textblock"> Native to eastern North America. </p>        </div>
+          <p class="textblock"> Highbush blueberry is native to eastern North America. </p>        </div>
 <!-- End of orgins -->
 <br>
 <!-- STORIES 💌 -->
@@ -130,12 +130,12 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Highbush blueberry (Vaccinium corymbosum) </h1>
+          <h1> Highbush blueberry &nbsp <i>Vaccinium corymbosum</i> </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub~</sub>Keep Walking<sub~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub~</sub>Back to Map<sub~</sub></a></button>
 
     </div>
 
