--- a/Cherry tree.html
+++ b/Cherry tree.html
@@ -69,13 +69,13 @@ need be tree removal
           <p class="textblock">  </p>
 February, March, April:
 <br>
-need be greenwood for carving
+Harvest greenwood for carving
 <br><br>
 May, June, July:
 <br>
-cherries for the community
+Cherries for the community
 <br><br>
-Augaust, September, October:
+August, September, October:
 <br>
 Need be leave and stalks for dyes and pigments.
       </div>
@@ -91,7 +91,7 @@ Need be leave and stalks for dyes and pigments.
 
           <h2> Uses </h2>
 
-          <p class="textblock"> Cherry trees are versatile in use. The leaves and branches can be uses for pigment; The wood is an excellent hardwood for small and large projects; And, the fruit can be harvested come summer-time. </p>        </div>
+          <p class="textblock"> Cherry trees are versatile in use. The leaves and branches can be uses for pigment; The wood is an excellent hardwood for small and large projects; Its leaves and cherry blossoms can impart a beautiful aroma to dishes — just prepare them properly! And, of course, the fruit can be harvested come summertime. </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -108,11 +108,11 @@ Need be leave and stalks for dyes and pigments.
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock">  </p>        </div>
 <!-- End of orgins -->
@@ -134,12 +134,12 @@ Need be leave and stalks for dyes and pigments.
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Cherry Tree  </h1>
+          <h1> Cherry Tree &nbsp <i>Prunus subg. Cerasus</i></h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
