--- a/Comfrey.html
+++ b/Comfrey.html
@@ -36,10 +36,14 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
-  *toxic to animals and humans* best to let it be.
+
+  No need to baby comfrey, it will grow without help.
+<br>
+<br>
+  Best to let it be.
 </p>
         </div>
 
@@ -69,12 +73,17 @@
 
           <h2> Uses </h2>
 
-          <p class="textblock"> Medicinal (anti-inflammatory), dye and garden fertilizer are a few of comfrey's uses. <br><br>
-How to make compost tea (a natual fertalizer for the garden):
+          <p class="textblock">
+            <sub>*</sub>Toxic to animals and humans. Do not ingest!<sub>*</sub>
 <br>
+<br>
+            Medicinal (as an anti-inflammatory compress), dye and garden fertilizer are a few of comfrey's uses.
+How to make compost tea (a natural fertalizer):
+<br><br>
+<i>
 Pluck comfrey.
 <br>
-place comfrey
+Place comfrey
 <br>
 in a bucket.
 <br>
@@ -90,7 +99,7 @@ maybe a day?
 <br>
 or two?
 <br>
-serve to the garden. </p>        </div>
+serve to the garden. </i></p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -102,16 +111,16 @@ serve to the garden. </p>        </div>
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://ucjeps.berkeley.edu/eflora/eflora_display.php?tid=45945" style="text-decoration: underline;"> Hyperlink to botanical identifiers for comfrey. </a>   </p>   </div>
+          <p class="textblock"> <a href="https://ucjeps.berkeley.edu/eflora/eflora_display.php?tid=45945" style="text-decoration: underline;"> Botanical identifiers for comfrey. </a>   </p>   </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> Europe and Asia. </p>  </div>
 <!-- End of orgins -->
@@ -133,12 +142,12 @@ serve to the garden. </p>        </div>
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Comfrey (Symphytum officinale)</h1>
+          <h1> Comfrey &nbsp; <i>Symphytum officinale</I></h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
